tests/ui/parser/pat-ranges-4.stderr
error: expected one of `...`, `..=`, `..`, `:`, `;`, `=`, or `|`, found `-`
  --> $DIR/pat-ranges-4.rs:4:12
   |
LL |     let 10 - 3 ..= 10 = 8;
   |            ^ expected one of 7 possible tokens

error: aborting due to previous error

